Update for the 1.46.1 release
(Also includes the 1.46.0 and 1.45.7 release information)

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,9 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.46.1">E2fsprogs 1.46.1 (February 9, 2021)</A>
+<LI><A HREF="#1.46.0">E2fsprogs 1.46.0 (January 29, 2021)</A>
+<LI><A HREF="#1.45.7">E2fsprogs 1.45.7 (January 28, 2021)</A>
 <LI><A HREF="#1.45.6">E2fsprogs 1.45.6 (March 20, 2020)</A>
 <LI><A HREF="#1.45.5">E2fsprogs 1.45.5 (January 7, 2020)</A>
 <LI><A HREF="#1.45.4">E2fsprogs 1.45.4 (September 23, 2019)</A>
@@ -135,6 +138,237 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.46.1">E2fsprogs 1.46.1 (February 9, 2021)</A></H2>
+
+<H3>Fixes</H3>
+
+<P>Fix a bug in libext2fs and debugfs when trying to set an extended
+attribute will result in a seg fault.</P>
+
+<P>Fix e2fsck so it properly accepts large_dir directories which are
+greater than 4GB in size.</P>
+
+<P>Fix fast commit support on big endian architectures.  Also avoid potential
+crash on an error handling case.</P>
+
+<P>Fix mke2fs -d so it correctly handles important a directory or small
+file which is stored using inline_data and contains an ACL or extended
+attribute.   (Addresses-Debian-Bug: #971014)</P>
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Fix build failure on systems with pthread && without FUSE support.</P>
+
+<P>Fix various compiler warnings.</P>
+
+<P>Fix portability problems by not depending on the glibc specific qsort_r
+function.</P>
+
+<P>Change configure.ac to use AS_HELP_STRING instead of the deprecated
+AC_HELP_STRING, and explicitly declare that the configure.ac requires
+autoconf 2.69.</P>
+
+<P>Fixed/improved various Debian packaging issues.  (Addresses-Debian-Bug:
+#966686)</P>
+
+<P>Update the Czech, French, Malay, Polish, Portuguese, Sweedish, and
+Ukranian translations from the translation project.</P>
+
+
+<H2><A NAME="1.46.0">E2fsprogs 1.46.0 (January 29, 2021)</A></H2>
+
+<H3>UI and Features</H3>
+
+<P>E2fsprogs now supports the fast_commit (COMPAT_FAST_COMMIT) feature.
+This feature, first available in Linux version 5.10, adds a fine-grained
+journalling which improves the latency of the fsync(2) system call.  It
+should also improve the performance of ext4 file systems exported via
+NFS.</P>
+
+<P>E2fsprogs now supports the stable_inodes (COMPAT_STABLE_INODES) feature.
+This needed to support fscrypt siphash algorithm, which calculates the
+initial vector (IV) for encryption based on the UUID and the inode
+number.  This means that we can't renumber inodes (for example, when
+shrinking a file system) and the UUID can't be changed without breaking
+the ability to decrypt the encryption.</P>
+
+<P>E2fsprogs now supports file systems which have both file system
+encryption and the casefold feature enabled.  This is used in some
+Android handsets, but has not yet landed upstream yet.</P>
+
+<P>E2fsck now will check file names on file systems with case folding
+enabled to make sure the characters are valid UTF-8 characters.  This is
+done for file systems which enforce strict encodings, and optionally if
+the extended "check_encoding" option is requested.</P>
+
+<P>The fuse2fs program now supports the "-o norecovery" option, which will
+suppress any journal replay that might be necessary, and mounts the file
+system read-only.</P>
+
+<P>E2fsck will now find and fix file system corruptions when the encrypted
+files have a different policy from their containing directory.</P>
+
+<P>The "htree" command in debugfs now displays the metadata checksums for
+hash tree index blocks.</P>
+
+<P>Dumpe2fs will print the error code that Linux kernels newer than v5.6
+will save to indicate the class of error which triggered the ext4_error
+event.</P>
+
+<P>E2fsprogs programs (in particular, fuse2fs) can now update htree
+directories without clearing the htree index.</P>
+
+<P>Mke2fs now sets the s_overhead_cluster field, so that the kernel doesn't
+need to calculate it at mount time.  This speeds up mounting very large
+file systems.</P>
+
+
+<H3>Fixes</H3>
+
+<P>E2fsck will properly handle checking for duplicated file names when case
+folding is enabled.</P>
+
+<P>Fix various bugs where a maliciously corrupted file systems could case
+e2fsck and other e2fsprogs programs to crash.</P>
+
+<P>Tune2fs will properly recalculate directory block checksums when
+clearing the dir_index feature.</P>
+
+<P>Fix a bug in e2fsck directory rehashing which could fail with ENOSPC
+because it doesn't take into account the space needed for the metadata
+checksum, and doesn't create a sufficiently deep index tree.</P>
+
+<P>Clarify the e2fsck messages when it resets the directory link count when
+it is set to the overflow value but it is no longer needed.</P>
+
+<P>The filefrag program can now request the kernel to display the extent
+status cache by using "filefrag -E".  (This requires Linux version 5.4
+or newer.)</P>
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Speed up mke2fs when creating large bigalloc file systems by optimizing
+ext2fs_convert_subcluster_bitmap().</P>
+
+<P>Bitmap blocks are now read using multiple threads (for systems with
+pthread support).  This speeds up dumpe2fs, e2fsck, and debugfs for very
+large file systems.</P>
+
+<P>The dumpe2fs and tune2fs will now avoiding to read the block group
+descriptors when they are not needed, which speeds up these program when
+operating on very large file systems.</P>
+
+<P>Drop use of the sysctl(2) system call, which is deprecated in Linux.</P>
+
+<P>Add support for "configure --enable-developer-features" which enables
+features only meant for developer.  The first such feature is "e2fsck -E
+clear_all_uninit_bits", which clears the uninitialized bit on all
+extents for all inodes.  Note that this can end up exposing uninitialized
+data to userspace, and should only used in very specialized situations.</P>
+
+<P>The e2fsck/revoke.c and e2fsck/recovery.c files are now kept idential
+with the fs/jbd2 versions of these files in the kernel.</P>
+
+<P>Fix various compiler and Coverity warnings.</P>
+
+<P>Update to use gettext 0.19.8.  This also removes the built-in "intl"
+directory as this is now considered deprecated by gettext.  This means
+that if the system doesn't have gettext installed on the build system,
+we will simply disable NLS support.</P>
+
+
+<H2><A NAME="1.45.7">E2fsprogs 1.45.7 (January 28, 2021)</A></H2>
+
+<H3>UI and Features</H3>
+
+<P>Mke2fs will now warn when creating a file system on a DAX-capable device
+and the block size is incompatible with DAX.</P>
+
+<P>The chattr and lsattr programs now support using the 'x' attribute to
+set/get dax support on a particular file.</P>
+
+<P>E2fsprogs now supports the gnu.* extended attribute namespace, which
+allows mke2fs -d to import the gnu.translator extended attributes.</P>
+
+<P>Add support for the simultaneous enablement of the casefold and
+encryption features, which ext4 supports starting with the v5.5 Linux
+kernel.</P>
+
+
+<H3>Fixes</H3>
+
+<P>When trying to run debugfs on a mounted file system, it's possible for
+the superblock to be read in an inconsistent state; debugfs will now
+retry the open in the hopes that it will succeed.</P>
+
+<P>Fix an off-by-one error when validating the depth of an htree which
+caused e2fsck to potentially fail to notice an invalid htree.</P>
+
+<P>Fix potential buffer overrun in e2fsck when scanning directory blocks in
+pass 2. (Addresses Google Bug: #158564737)</P>
+
+<P>Fix tune2fs so that it unlocks the MMP block if it can't perform the
+requested operation.</P>
+
+<P>Fix mke2fs so it can import the contents of a directory using the -d
+option when it has inode numbers that are greater than 2**32.   Also fix
+an ommission were the extended attributes on the top-level directory was
+not getting copied to the root directory.</P>
+
+<P>Fix e4crypt so that the add_key operation uses the explicitly provided
+salt if it is provided.</P>
+
+<P>Fix resize2fs to prevent it from overflowing the block group descriptors
+from overflowing the first block group.  (This can only happen when the
+block size is 1k and the file system is very large.)</P>
+
+<P>Fix debugfs's set_super_value command so it can set 64-bit integer
+fields, such as s_kbytes_written.</P>
+
+<P>Fix filefrag so that it won't crash if the kernel returns zero for
+statfs(2)'s device id or if it returns a blocksize of zero the device's
+blocksize.  This only happens with kernel bugs, but filefrag shouldn't
+crash when the kernel returns an unexpected value.</P>
+
+<P>Fix a few bad error code returns in the unix and sparse I/O managers.
+(These errors rarely happen in real life; these were find thanks to a
+static code checker.)</P>
+
+<P>E2fsck will no longer try to fix duplicate file names in an encrypted
+directory by mutating the file name since that will cause the decrypted
+file name to be gibberish, or to contain invalid characters.</P>
+
+<P>Updated and clarified various man pages.</P>
+
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>The misc/mke2fs.conf.in script now properly escaping of double quotes
+when incorporating the mke2fs.conf into the default_profile.c file.  The
+upstream version of the mke2fs.conf.in file doesn't have any double
+quotes, but this allows a customized distribution of e2fsprogs to have
+double quotes in its default mke2fs profile.</P>
+
+<P>Speeded up mkfs.ext3 by batching calls to ext2fs_zero_blocks when
+zeroing the blocks for an indirect-block mapped journal inode.</P>
+
+<P>Fixed portability problem for implementations of grep which don't
+support extended regexp's without the -E option.</P>
+
+<P>Fix various compiler and Coverity warnings.</P>
+
+<P>Fixed portability issue which caused a build failure when mkdir -p is
+not thread safe; in that case, the Makefiles would not find the
+install_sh replacement script.</P>
+
+<P>Fixed various Debian packaging issues.</P>
+
+<P>Synchronized changes from Android's AOSP e2fsprogs tree.</P>
+
+<P>Update the Dutch, Malay, and Serbian translations from the translation
+project.</P>
+
 
 <H2><A NAME="1.45.6">E2fsprogs 1.45.6 (March 20, 2020)</A></H2>
 
