--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.46.2">E2fsprogs 1.46.2 (February 28, 2021)</A>
 <LI><A HREF="#1.46.1">E2fsprogs 1.46.1 (February 9, 2021)</A>
 <LI><A HREF="#1.46.0">E2fsprogs 1.46.0 (January 29, 2021)</A>
 <LI><A HREF="#1.45.7">E2fsprogs 1.45.7 (January 28, 2021)</A>
@@ -138,6 +139,64 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.46.2">E2fsprogs 1.46.2 (February 28, 2021)</A></H2>
+
+<H3>UI and Features</H3>
+
+<P>Teach the tune2fs program to support "random" as an argument to the -c
+option, which sets the maximum mount count.  (Addresses Debian Bug:
+#926293)</P>
+
+<P>Add support for the FS_NOCOMP_FL flag to chattr and lsattr.</P>
+
+<H3>Fixes</H3>
+
+<P>When resizing a small file systems to a super-large file system size,
+avoid issuing some scary bitmap operation warnings.  (Addresses Github
+issue https://github.com/tytso/e2fsprogs/issues/60)</P>
+
+<P>Fix the debugfs rdump and ls commands so they will work correctly for
+uid's and gid's => 65536.  (Addresses Github issue issue
+https://github.com/tytso/e2fsprogs/issues/63)</P>
+
+<P>Fix the debugfs write and symlink commands so they support targets which
+contain a pathname (instead of only working when writing a file or
+creating a symlink in the current directory).  (Addresses Github issue
+https://github.com/tytso/e2fsprogs/issues/61)</P>
+
+<P>Fix Direct I/O support on block devices where the logical block size is
+greater 1k.  (This includes Advanced Format HDD's, where the sector size
+is 4k, and IBM Mainframe DASD's, where the sector size is 2k.)</P>
+
+<P>Fix debugfs's logdump so it works on file systems whose block size is
+greater than 8k.</P>
+
+<P>Fix a where e2fsck could a crash when there is error while e2fsck is
+trying to open the file system, and e2fsck calls ext2fs_mmp_stop()
+before MMP has been initialized.  (Addresses Debian Bug: #696609)</P>
+
+<P>Improved error checking in the fast commit replay code in e2fsck.</P>
+
+<P>Updated and clarified the chattr man page.</P>
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Fix various compiler and Coverity warnings.</P>
+
+<P>Update the Spanish translation from the translation project.</P>
+
+<P>Update the e2fsck/iscan.c test program so that it builds again.</P>
+
+<P>Fix an environmental dependency bug for the m_rootdir_acl regression
+test.</P>
+
+<P>Avoid the use of loff_t, which is not available for all compilers /
+system include files.</P>
+
+<P>Fix failure of the t_mmp_fail test when running on a device with a 4k
+logical sector size.</P>
+
 
 <H2><A NAME="1.46.1">E2fsprogs 1.46.1 (February 9, 2021)</A></H2>
 
