--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.46.4">E2fsprogs 1.46.4 (August 18, 2021)</A>
 <LI><A HREF="#1.46.3">E2fsprogs 1.46.3 (July 27, 2021)</A>
 <LI><A HREF="#1.46.2">E2fsprogs 1.46.2 (February 28, 2021)</A>
 <LI><A HREF="#1.46.1">E2fsprogs 1.46.1 (February 9, 2021)</A>
@@ -140,6 +141,68 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.46.4">E2fsprogs 1.46.4 (August 18, 2021)</A></H2>
+
+<h3>UI and Features</h3>
+
+<p>The defaults for mke2fs now call for 256 byte inodes for all file
+systems (with the exception of file systems for the GNU Hurd, which only
+supports 128 byte inodes).  Creating non-Hurd file systems with 128 byte
+inodes will trigger a warning message to make sure users are aware of
+the potential problems of using small/legacy inode sizes.</p>
+
+<p>The bigalloc feature is now considered supported if the cluster size no
+more than 16 times the block size.  So the mke2fs program has been
+changes to only warn if the cluster size is larger than that.</p>
+
+
+<h3>Fixes</h3>
+
+<p>E2fsck now checks to make sure directory entries do not reference
+internal quota inodes.</p>
+
+<p>E2image now includes the quota inodes when creating file system image,
+since they are part of the file system metadata.</p>
+
+<p>E2fsck now properly accounts the quota usage of the project quota file.</p>
+
+<p>Fix a regression introduced in 1.64.3 where attempting to create a file
+system image using mke2fs into a non-existent file would fail.
+(Addresses Debian Bug: #992094)</p>
+
+<p>Fix mke2fs to correctly create Posix ACL's on big-endian systems when
+copying files from a directory hierarchy.</p>
+
+<p>Updated and clarified the resize2fs man pages.  (Addresses Debian Bug:
+#979411)</p>
+
+<h3>Performance, Internal Implementation, Development Support etc.</h3>
+
+<p>Improve various regression tests to be more portable and to reflect the
+new default inode size of 256 byte inodes, even for small file systems.</p>
+
+<p>Fixed a GNU Hurd portability problem which was causing tests to fail.</p>
+
+<p>Fixed a test failure in f_baddotdir on big-endian systems.  This wasn't
+necessarily a bug per se in e2fsck, but rather e2fsck having different
+behaviour on big-endian systems.  (Addresses Debian Bug: #991922)</p>
+
+<p>Use WantedBy=multi-user.target in e2scrub_reap.service.  (Addresses
+Debian Bug: #991349)</p>
+
+<p>Synchronize e2fsck/recovery.c with the kernel's fs/jbd2/recovery.c</p>
+
+<p>Fix various Coverity and compiler warnings.</p>
+
+<p>Fix various error pathes to make sure we don't leak resources or
+potentially use or try to free uninitialized pointers.</p>
+
+<p>Added a setup-schroot command for use on Debian porter boxes.</p>
+
+<p>Updated config.guess and config.sub with newer versions from the FSF.</p>
+
+<p>Update Czech, Dutch, French, Polish, Portuguese, and Swedish translations.</p>
 
 <H2><A NAME="1.46.3">E2fsprogs 1.46.3 (July 27, 2021)</A></H2>
 
